# pico_nco_generator

./: CMakeLists.txt  Menusystem.txt  README.md  nco.c  rf_nco.c  rotary_enc.c  rotary_enc.h  si5351.c  si5351.h
test/: a.out  cordic.c  ssb.c
